calendar style + null bleeding fix

--- a/cycle-tracker/src/app/components/add-symptoms-modal/add-symptoms-modal.component.scss
+++ b/cycle-tracker/src/app/components/add-symptoms-modal/add-symptoms-modal.component.scss
@@ -1,10 +1,3 @@
-.mat-calendar-body-selected{
-  background-color: var(--ion-color-success);
-  outline-color: var(--ion-color-medium);
-  outline-width: 3px;
-  outline-style: solid;
-}
-
 button.red{
   background: var(--ion-color-secondary);
   border-radius: 100%;
@@ -16,38 +9,53 @@ button.blue{
 }
 
 button.symptom-log{
-  outline-color: var(--ion-color-medium);
-  outline-width: 3px;
-  outline-style: solid;
-  outline-offset: -3px;
-  border-radius: 100%;
+  // outline-color: var(--ion-color-medium);
+  // outline-width: 3px;
+  // outline-style: solid;
+  // outline-offset: -3px;
+  // border-radius: 100%;
+  .mat-calendar-body-cell-content{
+    outline-width: 2px;
+    outline-style: solid;
+    outline-color: var(--ion-color-medium);
+    border-radius: 100%;
+  }
+  .mat-calendar-body-selected{
+    background-color: var(--ion-color-light-shade);
+    color: black;
+  }
 }
 
 button.red-symptom-log{
-  outline-color: var(--ion-color-medium);
-  outline-width: 3px;
-  outline-style: solid;
-  outline-offset: -3px;
-  background: var(--ion-color-secondary);
-  border-radius: 100%;
+  .mat-calendar-body-cell-content{
+    outline-width: 2px;
+    outline-style: solid;
+    outline-color: var(--ion-color-medium);
+    background: var(--ion-color-secondary);
+    border-radius: 100%;
+  }
+  .mat-calendar-body-selected{
+    background-color: var(--ion-color-secondary-shade);
+  }
 }
 
 button.blue-symptom-log{
-  outline-color: var(--ion-color-medium);
-  outline-width: 3px;
-  outline-style: solid;
-  outline-offset: -3px;
-  background: var(--ion-color-primary);
-  border-radius: 100%;
+  .mat-calendar-body-cell-content{
+    outline-width: 2px;
+    outline-style: solid;
+    outline-color: var(--ion-color-medium);
+    background: var(--ion-color-primary);
+    border-radius: 100%;
+  }
+  .mat-calendar-body-selected{
+    background-color: var(--ion-color-primary-shade);
+  }
 }
 
 button[mat-icon-button]{
   background-color: transparent;
 }
 
-button.empty-day{
-  outline-color: transparent;
-  outline-width: 0px;
-  outline-offset: -3px;
-  border-radius: 100%;
+.mat-calendar-body-selected{
+  background-color: var(--ion-color-success-shade);
 }
